# data_pipeline

./: Dockerfile  HISTORY.md  README.md  notebook.ipynb  pipeline.py  pyproject.toml
tests/: test_pipeline.py
tests/resources/: dados_tratados.csv
utils/: enum.py
