[tool.poetry]
name = "data_pipeline"
version = "0.1.0"
description = ""
authors = ["Ana Paula Gonzaga <aninha.sales58@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
ipython = "^8.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
